# mdview

./: Cargo.toml  LICENSE  Makefile  README.md  test.md
.github/workflows/: app-bundle.yml
Casks/: mdiew.rb  mdview.rb
bundle/: Info.plist
src/: main.rs
